--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.15.10",
     "zustand": "^5.0.3"
   },
